tests/cases/patterns/ok/pattern-ref-ownership-vector-dynamic-suffix.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn borrow_suffix(flag: bool) -> i64 {
  var values: Vec[own i64] = if flag {
    [make_owned(1), make_owned(2)]
  } else {
    [make_owned(3), make_owned(4), make_owned(5)]
  };
  {
    let ref [first, .., last] = values;
  }
  drop values;
  return 0;
}

fn main() -> i64 {
  return borrow_suffix(true) + borrow_suffix(false);
}
