tests/cases/patterns/errors/pattern-ref-ownership-vector-rest.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var values: Vec[own i64] = [make_owned(1), make_owned(2), make_owned(3)];
  let moved = values[2];
  let ref [first, .., last] = values;
  drop moved;
  drop values;
  return 0;
}
